--- a/datasets/understanding-datasets.mdx
+++ b/datasets/understanding-datasets.mdx
@@ -24,7 +24,7 @@ Datasets must be pandas dataframes exported as a parquet file with an "embedding
     Vector representations of text, allowing for semantic similarity comparisons.
   </Card>
   <Card title="Tags" icon="tag">
-    Metadata associated with each embedding, returned as content in search results.
+    Metadata associated with each embedding, returned as content in search results. **This is the only column returned in search results.**
   </Card>
   <Card title="Filter Columns" icon="filter">
     Columns in the dataset that can be used to filter the search results.
@@ -103,24 +103,14 @@ These columns cannot be named `embedding` or `tag` since these are reserved colu
 </Warning>
 
 ### Example
-Suppose we have the following dataset stored in a Pandas dataframe:
+Consider the following dataset stored in a Pandas dataframe:
 
-| company_description | company_name | id |
+| embedding | tag | size |
 |-----------|-----|-----|
-| 'Acme is a startup that makes widgets' | 'Acme' | 1 |
-| 'Parker Industries is a startup that makes widgets' | 'Parker Industries' | 3 |
+| [...] | 'Acme' | 1 |
+| [...] | 'Parker Industries' | 3 |
 
-Now, suppose we want to be able to filter the search results by the `company_size` column. We would add `company_size` as a filter column and then reference it in the `filter_query` parameter of a search.
-
-Our new dataframe now looks like this:
-
-| company_description | company_name | id | company_size |
-|-----------|-----|-----|-----|
-| 'Acme is a startup that makes widgets' | 'Acme' | 1 | 'large' |
-| 'Wayne Enterprises is a startup that makes widgets' | 'Wayne Enterprises' | 2 | 'large' |
-| 'Parker Industries is a startup that makes widgets' | 'Parker Industries' | 3 | 'small' |
-
-You can now reference `company_size` in the `filter_query` parameter of a search. For example, you could filter the search results to only include companies with the `company_size` of 'large' by setting the `filter_query` parameter to `company_size == 'large'`.
+You can see we have the `embedding` and `tag` columns that we need. However, we also have an `size` column. We would call this column a `filter_column` since it is not used for searching directly but can be used to filter the search results.
 
 <Tip>
   You can read more about filter queries [here](/search/search-parameters#filter-query).
