--- a/datasets/understanding-datasets.mdx
+++ b/datasets/understanding-datasets.mdx
@@ -89,7 +89,7 @@ Suppose we have the following dataset stored in a Pandas dataframe:
     df['tag'] = df['id'].astype(str)
 
     # Save as a Parquet File
-    df.to_parquet('../data/data.parquet')
+    df.to_parquet('data.parquet')
     ```
   </Step>
 </Steps>
